Enable module system related debug flags